# police-slm-repository

./: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BACKGROUND_PROCESSING.md  CLAUDE.md  CLEANUP_SUMMARY.md  DATA_PIPELINE.md  DEPLOYMENT.md  DEVELOPMENT.md  Makefile  QUICK_START.md  RAG_SYSTEM.md  README.md  SETUP.md  UPGRADE_INSTRUCTIONS.md  UPGRADE_PLAN.md  diagnose_kanoon.py  diagnose_kanoon2.py  docker-compose.yml  monitor_ingestion.ps1  pyproject.toml  test_kanoon.py  upgrade_commands.bat  upgrade_commands.sh
.claude/: settings.json  settings.local.json
.claude/commands/: build-api.md  build-dashboard.md  build-docker.md  build-model.md  build-ocr-pipeline.md  build-parsers.md  build-rag.md  build-security.md  build-tests.md  build-training-materials.md  collect-data.md  fix-and-continue.md  run-phase1.md  run-phase2.md  run-phase3.md  setup.md  sprint1-fix-and-embed.md  sprint2-rag-working.md  sprint3-api.md  sprint4-dashboard.md  status.md
configs/: crpc_from_bnss_mapping.json  crpc_to_bnss_mapping.json  iea_from_bsa_mapping.json  iea_to_bsa_mapping.json  ingestion_config.yaml  ipc_from_bns_mapping.json  ipc_to_bns_mapping.json  model_config.yaml
data/: phase1_report.md
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.model  init-db.sql  nginx.conf  prometheus.yml
scripts/: backup.sh  setup_env.sh  test_rag.py
src/: cli.py
src/api/: auth.py  database.py  dependencies.py  main.py  models.py  schemas.py
src/api/routes/: auth_routes.py  chargesheet_routes.py  search_routes.py  sop_routes.py  utils_routes.py
src/dashboard/: index.html  package.json  tailwind.config.js  vite.config.ts
src/dashboard/src/: App.tsx  index.css  main.tsx
src/dashboard/src/components/: DashboardLayout.tsx
src/dashboard/src/hooks/: useAuth.tsx
src/dashboard/src/pages/: ChargesheetPage.tsx  HomePage.tsx  LoginPage.tsx  SOPPage.tsx  SearchPage.tsx  SectionConverterPage.tsx
src/data_sources/: __init__.py  base.py  ecourts.py  gujarat_hc.py  india_code.py  indian_kanoon.py  ncrb.py  orchestrator.py  supreme_court.py
src/ingestion/: kaggle_ingest.py  ocr_pipeline.py  pdf_archive_ingest.py  processor.py  section_normalizer.py
src/model/: inference.py
src/retrieval/: chunker.py  embeddings.py  prompts.py  rag_pipeline.py
